@@ -1,3 +1,8 @@
+Sat Oct 24 14:33:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Basic_Types.h:
+          Fix for PPC64
+
 Sat Oct 24 14:30:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * include/makeinclude/platform_linux.GNU:
